Public Release :tada:

--- a/about/index.html
+++ b/about/index.html
@@ -35,6 +35,14 @@
     gtag("config", "UA-180685786-1");
   </script>
 
+  <!-- Social Meta -->
+  <meta property="og:title" content="InspireStep.com - About our team">
+  <meta property="og:description" content="Helping every deserving candidate to land a work-opportunity.">
+  <meta property="og:image" content="https://inspirestep.com/assets/logo-full.png">
+  <meta property="og:url" content="https://inspirestep.com/about">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="InspireStep.com">
+  <meta name="twitter:image:alt" content="InspireStep.com Big Logo">
   <!-- End Head -->
 </head>
 
@@ -48,9 +56,10 @@
             <img class="logo" src="/assets/logo-full.png" alt="InspireStep.com" />
           </a>
         </li>
-        <li>
-          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan)</span> or
-          <span><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
+        <li class="contact">
+          Questions? Talk to our founders: <span class="tele-contact"><a href="tel:+919981677217">+91-99816-77217</a>
+            (Furqan)</span> or
+          <span class="tele-contact"><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
       </ul>
     </nav>
@@ -65,14 +74,10 @@
       <article class="member-card">
         <div class="member-head">
           <img class="member-img" src="/assets/img/jophin.jpg" alt="Jophin Varughese sitting in a chair">
-          <div class="intro">
-            <h2>Jophin Varughese</h2>
-            <h3>Co-founder</h3>
-            <p>I am Jophin. The deal cracker.</p>
-          </div>
+          <h2>Jophin Varughese</h2>
+          <h3>Co-founder and Operations Lead</h3>
+          <p><b>I am Jophin. The deal hacker.</b></p>
         </div>
-
-        <br />
 
         <div class="member-content">
           <p>During the lockdown period I realized that getting a freelance offer is
@@ -80,10 +85,10 @@
           </p>
           <p>And hence InspireStep was born with a vision to provide every deserving candidate a work-opportunity to
             earn money and help their families.</p>
-          <p>My friends and relatives say that I'm a deal cracker. Thanks to my charming nature ;). I manage business
+          <p>My friends and relatives say that I'm a deal hacker. Thanks to my charming nature ;). I manage business
             operations here at InspireStep.</p>
           <p>I primarily deal with businesses. If you are a business / employer and need some help, you can get in touch
-            with me via phone: <a href="tel:+919669959194">+91
+            with me via phone: <a class="tele-contact" href="tel:+919669959194">+91
               96699 59194</a></p>
         </div>
       </article>
@@ -91,12 +96,10 @@
       <article class="member-card">
         <div class="member-head">
           <img class="member-img" src="/assets/img/furqan.jpg" alt="Furqan Ahmed sitting in a chair">
-          <span class="name">Furqan Ahmed</span>
-          <span class="what">Co-founder</span>
-          <span class="intro">I was the first one to whom Jophin talked about the idea.</span>
+          <h2>Furqan Ahmed</h2>
+          <h3>Co-founder and Relations Lead</h3>
+          <p><b>I was the first one to whom Jophin talked about the idea.</b></p>
         </div>
-
-        <br />
 
         <div class="member-content">
           <p>As soon as I heard the Idea. It clicked. I realized that the time was right to start this
@@ -105,7 +108,8 @@
             students.</p>
           <p>I believe in listening and being decessive when the time demands. So at InspireStep I take the executive
             decisions and lead the students' relationships with the companies.</p>
-          <p>Here's my contact incase you have some queries related to InspireStep.com: <a href="tel:+919981677217">+91
+          <p>I'll be happy to help you with any queries related to our work at InspireStep: <a class="tele-contact"
+              href="tel:+919981677217">+91
               99816 77217</a></p>
         </div>
       </article>
