--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
-  <meta name="description"
-    content="We at InspireStep have promised ourselves to divert our nation from the roots of unemployment and give every deserving candidate a work-opportunity to earn money and help their families." />
+  <meta name="description" content="Helping every deserving candidate to land a work-opportunity." />
 
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/home.css" />
@@ -35,6 +34,15 @@
     gtag("config", "UA-180685786-1");
   </script>
 
+  <!-- Social Meta -->
+  <meta property="og:title" content="InspireStep.com">
+  <meta property="og:description" content="Helping every deserving candidate to land a work-opportunity.">
+  <meta property="og:image" content="https://inspirestep.com/assets/logo-full.png">
+  <meta property="og:url" content="https://inspirestep.com/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="InspireStep.com">
+  <meta name="twitter:image:alt" content="InspireStep.com Big Logo">
+
   <!-- End Head -->
 </head>
 
@@ -49,8 +57,9 @@
           </a>
         </li>
         <li class="contact">
-          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan)</span> or
-          <span><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
+          Questions? Talk to our founders: <span class="tele-contact"><a href="tel:+919981677217">+91-99816-77217</a>
+            (Furqan)</span> or
+          <span class="tele-contact"><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
       </ul>
     </nav>
@@ -58,10 +67,8 @@
 
   <main>
     <div class="hero-heading">
-      <h1>
-        Businesses need People.<br />
-        Now it's your time to take an Inspiring step.
-      </h1>
+      <h1>Businesses Need People.</h1>
+      <h1>Now It's Your Time To Take an Inspiring Step.</h1>
     </div>
 
     <section class="cta-cards-wrapper">
