--- a/terms-and-privacy/index.html
+++ b/terms-and-privacy/index.html
@@ -34,6 +34,14 @@
     gtag("config", "UA-180685786-1");
   </script>
 
+  <!-- Social Meta -->
+  <meta property="og:title" content="InspireStep.com - Terms and Privacy">
+  <meta property="og:description" content="Helping every deserving candidate to land a work-opportunity.">
+  <meta property="og:image" content="https://inspirestep.com/assets/logo-full.png">
+  <meta property="og:url" content="https://inspirestep.com/terms-and-privacy">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="InspireStep.com">
+  <meta name="twitter:image:alt" content="InspireStep.com Big Logo">
   <!-- End Head -->
 </head>
 
@@ -47,9 +55,10 @@
             <img class="logo" src="/assets/logo-full.png" alt="InspireStep.com" />
           </a>
         </li>
-        <li>
-          Questions? Talk to our founders: <span><a href="tel:+919981677217">+91-99816-77217</a> (Furqan)</span> or
-          <span><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
+        <li class="contact">
+          Questions? Talk to our founders: <span class="tele-contact"><a href="tel:+919981677217">+91-99816-77217</a>
+            (Furqan)</span> or
+          <span class="tele-contact"><a href="tel:+919669959194">+91-96699-59194</a> (Jophin)</span>
         </li>
       </ul>
     </nav>
