--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Social Meta -->
   <meta property="og:title" content="InspireStep.com">
   <meta property="og:description" content="Helping every deserving candidate to land a work-opportunity.">
-  <meta property="og:image" content="https://inspirestep.com/assets/logo-full.png">
+  <meta property="og:image" content="https://inspirestep.com/assets/logo-600px.png">
   <meta property="og:url" content="https://inspirestep.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:site_name" content="InspireStep.com">
