--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
   <!-- Social Meta -->
   <meta property="og:title" content="InspireStep.com - About our team">
   <meta property="og:description" content="Helping every deserving candidate to land a work-opportunity.">
-  <meta property="og:image" content="https://inspirestep.com/assets/logo-full.png">
+  <meta property="og:image" content="https://inspirestep.com/assets/logo-600px.png">
   <meta property="og:url" content="https://inspirestep.com/about">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:site_name" content="InspireStep.com">
