Add PWA theme color

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <meta property="og:site_name" content="InspireStep.com">
   <meta name="twitter:image:alt" content="InspireStep.com Big Logo">
 
+  <meta name="theme-color" content="#ffc331"/>
   <!-- End Head -->
 </head>
 
