--- a/about/index.html
+++ b/about/index.html
@@ -43,6 +43,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:site_name" content="InspireStep.com">
   <meta name="twitter:image:alt" content="InspireStep.com Big Logo">
+
+  <meta name="theme-color" content="#ffc331" />
   <!-- End Head -->
 </head>
 
