Special Thanks To Me!

--- a/about/index.html
+++ b/about/index.html
@@ -116,6 +116,18 @@
         </div>
       </article>
     </section>
+    <article class="special-thanks">
+      <p>
+        We thank our friend Vivek for his great work on this site. He single handedly undertook all the operations of
+        the site: from brand logo, conten ideation and creation to website development. Along the way he gave us some
+        cool growth ideas and most importantly, we made a nice bond.
+      </p>
+      <p>
+        If you want to get some product development work done & that too with uncompromised quality then you should get
+        in touch
+        with Vivek: <a class="tele-contact" href="tel:+919425532662">+91 94255 32662</a>.
+      </p>
+    </article>
   </main>
 
   <footer>
