Add Pranay. Sorry Pranay :(

--- a/about/index.html
+++ b/about/index.html
@@ -118,9 +118,11 @@
     </section>
     <article class="special-thanks">
       <p>
-        We thank our friend Vivek for his great work on this site. He single handedly undertook all the operations of
-        the site: from brand logo, conten ideation and creation to website development. Along the way he gave us some
-        cool growth ideas and most importantly, we made a nice bond.
+        We thank our friend Vivek for his great work on this site. He undertook the operations of
+        the site: brand logo design, content ideation and creation to website development. Vivek's friend Pranay bought design of the logo to life with his superb photoshop skills. 
+      </p>
+      <p>
+        Along the way Vivek gave us cool growth ideas and most importantly, we all made a nice bond.
       </p>
       <p>
         If you want to get some product development work done & that too with uncompromised quality then you should get
